# coconut_crab

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.zed/: settings.json
coconut_crab_base_drop/: Cargo.toml
coconut_crab_base_drop/src/: main.rs
coconut_crab_blue_drop/: Cargo.toml
coconut_crab_blue_drop/src/: main.rs
coconut_crab_client/: Cargo.toml  build.rs
coconut_crab_client/assets/img/: favicon.af
coconut_crab_client/src/: canary.rs  client.rs  comm.rs  config.rs  crypto.rs  img.rs  main.rs  persist.rs  shredder.rs  status.rs  ui.rs  walker.rs
coconut_crab_client/ui/: main.slint
coconut_crab_lib/: Cargo.toml
coconut_crab_lib/assets/cert/: ca-cert.cnf  ca-cert.pem  ca-key.pem  cert.cnf  cert.ext  cert.pem  key.pem  server.csr
coconut_crab_lib/src/: file.rs  lib.rs  web.rs
coconut_crab_server/: Cargo.toml
coconut_crab_server/assets/private/: asym-priv-key.pem
coconut_crab_server/assets/public/: asym-pub-key.pem
coconut_crab_server/src/: config.rs  main.rs  models.rs
group_docx_tool/: Cargo.toml  group_docx_drop.sh
group_docx_tool/src/: config.rs  main.rs
