[workspace]
members = [
    "coconut_crab_client",
    "coconut_crab_server",
    "group_docx_tool",
    "coconut_crab_base_drop",
    "coconut_crab_lib", 
    "coconut_crab_blue_drop",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = true