[package]
name = "coconut_crab_base_drop"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
description = "Downloads and executes coconut_crab_client from coconut_crab_server"

[dependencies]
coconut_crab_lib = { path = "../coconut_crab_lib" }
env_logger = "0.11.8"
log = "0.4.29"
