[package]
name = "coconut_crab_blue_drop"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
description = "Wrapper to perform AutoBlue exploit against given groups"

[dependencies]
env_logger = "0.11.9"
coconut_crab_lib = { path = "../coconut_crab_lib" }
log = "0.4.29"
regex = "1.12.3"
