[package]
name = "coconut_crab_client"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Simulated ransomware client for incident response testing"

[dependencies]
coconut_crab_lib = { path = "../coconut_crab_lib" }
auto-launch = "0.5.0"
chacha20 = "0.9.1"
hex = "0.4.3"
rand = { version = "0.8.5", features = [
    "small_rng",
] } # Needed for RSA create compatibility
rsa = "0.9.6"
walkdir = "2.4.0"
zeroize = "1.7.0"
serde = { version = "1.0.197", features = ["derive"] }
csv = "1.3.0"
hostname = "0.4.0"
sha2 = "0.10.9"
litcrypt2 = "0.1.3"
embed-manifest = "1.4.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.15"
log = { version = "0.4" }
rust-embed = { version = "8.7.1", features = ["compression"] }
slint = "1.5.0"
image = "0.25.0"
env_logger = "0.11.3"
regex = "1.10.4"
lazy_static = "1.4.0"
zip = "2.6.1"
wallpaper = "3.2.0"
generic-array = "1.2.0"

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winnt"] }
slint-build = "1.5.0"

[package.metadata.winres]
ProductName = "Coconut Crab"
OriginalFilename = "coconut_crab_client.exe"
FileDescription = "Pinch Pinch"
ProductVersion = "1.0"
LegalCopyright = "jenkinsmichpa"
