[package]
name = "coconut_crab_client"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
build = "build.rs"
description = "Simulated ransomware client for incident response testing"

[dependencies]
coconut_crab_lib = { path = "../coconut_crab_lib" }
auto-launch = "0.6.0"
chacha20 = "0.9.1"
hex = "0.4.3"
rand = { version = "0.8.5", features = [
    "small_rng",
] } # Version <0.9.0 is needed for RSA create compatibility
rsa = "0.9.10"
walkdir = "2.5.0"
zeroize = "1.8.2"
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
hostname = "0.4.2"
sha2 = "0.10.9"
litcrypt2 = "0.1.3"
embed-manifest = "1.5.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.15"
log = { version = "0.4.29" }
rust-embed = { version = "8.10.0", features = ["compression"] }
slint = "1.14.1"
image = "0.25.9"
env_logger = "0.11.8"
regex = "1.12.2"
lazy_static = "1.5.0"
zip = "7.1.0"
wallpaper = "3.2.0"
generic-array = "1.3.5"

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winnt"] }
slint-build = "1.14.1"

[package.metadata.winres]
ProductName = "Coconut Crab"
OriginalFilename = "coconut_crab_client.exe"
FileDescription = "Pinch Pinch"
ProductVersion = "1.0"
LegalCopyright = "jenkinsmichpa"
