[package]
name = "coconut_crab_client"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
build = "build.rs"
description = "Simulated ransomware client for incident response testing"
license = "MIT"
repository = "https://github.com/jenkinsmichpa/coconut_crab"
readme = "../README.md"
keywords = [
  "ransomware",
  "simulation",
  "incident-response",
  "education",
  "security",
]
categories = ["simulation", "security"]

[dependencies]
coconut_crab_lib = { path = "../coconut_crab_lib" }
auto-launch = "0.6.0"
hex = "0.4.3"
rand = "0.10.2"
purecrypto = { version = "0.6.26", default-features = false, features = [
  "rsa",
  "cipher",
  "der",
  "std",
] }
zeroize = "1.9.0"
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
hostname = "0.4.2"
litcrypt2 = "0.1.3"
crossbeam-channel = "0.5.16"
log = { version = "0.4.33" }
rust-embed = { version = "8.12.0", features = ["compression", "include-exclude"] }
slint = "1.17.1"
image = "0.25.10"
env_logger = "0.11.11"
regex = "1.13.0"
zip = "8.6.0"
wallpaper = "3.2.0"
zlob = "1.6.1"
[build-dependencies]
embed-manifest = "1.5.0"
winresource = "0.1.31"
slint-build = "1.17.1"

[package.metadata.winresource]
ProductName = "Coconut Crab"
OriginalFilename = "coconut_crab_client.exe"
FileDescription = "Mary-Kate and Ashley"
LegalCopyright = "jenkinsmichpa"
