[package]
name = "coconut_crab_server"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
description = "Simulated ransomware server for incident response testing"

[dependencies]
coconut_crab_lib = { path = "../coconut_crab_lib" }
axum = "0.8.8"
axum-embed = "0.1.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
csv = "1.4.0"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.29"
rand = "0.9.1"
regex = "1.12.2"
rsa = "0.9.10"
rust-embed = { version = "8.9.0", features = ["compression"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
rustls = { version = "0.23.36", features = ["aws-lc-rs"] }
