[package]
name = "coconut_crab_server"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
description = "Simulated ransomware server for incident response testing"

[dependencies]
coconut_crab_lib = { path = "../coconut_crab_lib" }
axum = "0.8.9"
axum-embed = "0.1.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.30"
rand = "0.10.2"
regex = "1.12.3"
purecrypto = { version = "0.6", default-features = false, features = [
  "rsa",
  "der",
  "std",
] }
rust-embed = { version = "8.11.0", features = ["compression"] }
serde = { version = "1.0.228", features = ["derive"] }
toasty = { version = "0.7", features = ["turso"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
rustls = { version = "0.23.40", features = ["aws-lc-rs"] }
