[package]
name = "group_docx_tool"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
description = "Generates and verifies randomish docx files for given group numbers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx-rust = "0.1.10"
hex = "0.4.3"
rand = { version = "0.9.1", features = ["small_rng"] }
sha2 = "0.10.9"
ureq = "3.1.4"
