[package]
name = "group_docx_tool"
version = "0.1.0"
authors = ["Michael Jenkins <jenkinsmichpa@gmail.com>"]
edition = "2024"
description = "Generates and verifies randomish docx files for given group numbers"
license = "MIT"
repository = "https://github.com/jenkinsmichpa/coconut_crab"
readme = "../README.md"
keywords = ["docx", "education", "incident-response"]
categories = ["education", "security"]

[dependencies]
docx-rust = "0.1.11"
hex = "0.4.3"
rand = "0.10.2"
purecrypto = { version = "0.6", default-features = false, features = [
  "hash",
  "std",
] }
ureq = "3.3.0"
